--- a/views/index.html
+++ b/views/index.html
@@ -217,6 +217,7 @@ pre {
 <section class='container'>
           <hgroup>
             <h1>Welcome to your Forty8Fifty Labs Node.js application on OpenShift!</h1>
+            <h2>Will this blend?</h2>
           </hgroup>
 
 
