Added flavor text.

--- a/views/index.html
+++ b/views/index.html
@@ -218,6 +218,7 @@ pre {
           <hgroup>
             <h1>Welcome to your Forty8Fifty Labs Node.js application on OpenShift!</h1>
             <h2>Will this blend? Yes it will.</h2>
+            <h3>I love scaling pods.</h3>
           </hgroup>
 
 
