--- a/views/index.html
+++ b/views/index.html
@@ -300,6 +300,9 @@ $ git push</pre>
                    <span class="code" id="count-value">No database configured</span>
                    </p>
                 <%} %>
+                <p>Node IP address:
+                  <span class="code"><%=ip.address()%></span>
+                </p>
           </section>
         </div>
 
